MD-6396: remove --illegal-access=permit option